--- a/t/te/tel/telltalegames.com.html
+++ b/t/te/tel/telltalegames.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the telltalegames.com privacy policy that was archived on 2005-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051224192741id_/http%3A//www.telltalegames.com/home%3Faction%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the telltalegames.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615065238id_/http%3A//www.telltalegames.com/home%3Faction%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Telltale, Inc. Privacy Policy</title>
 <meta name="description" content="TellTale Games">
 <meta name="keywords" content="Telltale, Telltale Games, Texas Hold'em, Texas Holdem, Poker, Bone, Downloadable Games, story, character, narrative">
-
 <link rel="stylesheet" href="http://www.telltalegames.com/css/ttg.css" type="text/css" title="Linked" media="screen">
+<link rel="Shortcut Icon" type="image/ico" href="/favicon.ico">
 <style type="text/css">
 body {
     background-image: url(http://www.telltalegames.com/images/white.gif);
@@ -17,11 +17,19 @@ body {
 }
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<script src="/__utm.js" type="text/javascript"></script>
+<!--[if lt IE 7]><script type="text/javascript" language="javascript" src="http://www.telltalegames.com/script/png.js"></script><![endif]-->
 <script type="text/javascript" language="javascript" src="http://www.telltalegames.com/script/changeImage.js"></script>
 <script type="text/javascript" language="javascript" src="http://www.telltalegames.com/script/cookies.js"></script>
-<!--[if gte IE 5]><script type="text/javascript" src="http://www.telltalegames.com/script/png.js"></script><![endif]-->
+<script type="text/javascript" language="javascript" src="http://www.telltalegames.com/script/flash.js"></script>
 <script language="JavaScript" type="text/JavaScript">
 <!--
+function isExplorer()
+{
+	var rslt = navigator.appVersion.match(/MSIE (\d+\.\d+)/, '');
+	return (rslt != null && Number(rslt[1]) >= 5.5);
+}
+
 function MM_swapImgRestore() { //v3.0
   var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
 }
@@ -43,6 +51,7 @@ function MM_findObj(n, d) { //v4.01
 function MM_swapImage() { //v3.0
   var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+   fnLoadPngs();
 }
 
 function swapImage() { 
@@ -76,10 +85,14 @@ function ValidateForm() {
   }
   return true;
 }
+
+var preloadFlag = false;
+
 //-->
 </script>
 
 </head>
+
 <body>
 <center>
 <!-- MASTHEAD - START -->
@@ -89,11 +102,74 @@ function ValidateForm() {
 
 <a name="top"></a><table width="841" border="0" cellpadding="0" cellspacing="0">
     <tbody><tr>
-      <td><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="841" height="70">
-        <param name="movie" value="/images/flash/nav.swf?login=false">
-        <param name="quality" value="high">
-        <embed src="/images/flash/nav.swf?login=false" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="841" height="70">
-      </object></td>
+      <td><script language="Javascript">
+		var MM_contentVersion = 7;
+		var plugin = (navigator.mimeTypes && navigator.mimeTypes["application/x-shockwave-flash"]) ? navigator.mimeTypes["application/x-shockwave-flash"].enabledPlugin : 0;
+		if ( plugin ) {
+				var words = navigator.plugins["Shockwave Flash"].description.split(" ");
+			    for (var i = 0; i < words.length; ++i)
+			    {
+				if (isNaN(parseInt(words[i])))
+				continue;
+				var MM_PluginVersion = words[i]; 
+			    }
+			var MM_FlashCanPlay = MM_PluginVersion >= MM_contentVersion;
+		}
+		else if (navigator.userAgent && navigator.userAgent.indexOf("MSIE")>=0 
+		   && (navigator.appVersion.indexOf("Win") != -1)) {
+			document.write('<SCR' + 'IPT LANGUAGE=VBScript\> \n'); //FS hide this from IE4.5 Mac by splitting the tag
+			document.write('on error resume next \n');
+			document.write('MM_FlashCanPlay = ( IsObject(CreateObject("ShockwaveFlash.ShockwaveFlash." & MM_contentVersion)))\n');
+			document.write('</SCR' + 'IPT\> \n');
+		}
+		if ( MM_FlashCanPlay ) {
+				document.writeln('<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="841" height="70">');
+				document.writeln('  <param name="movie" value="/images/flash/nav.swf?login=false">');
+				document.writeln('  <param name="quality" value="high">');
+				document.writeln('  <embed src="/images/flash/nav.swf?login=false" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="841" height="70"></embed>');
+				document.writeln('</object>');
+		} else{
+				document.writeln('<table width="841" height="69" border="0" cellpadding="0" cellspacing="0">');
+				document.writeln('	<tr>');
+				document.writeln('		<td rowspan="2"><a href="/home"><img src="/images/flashlessnav/logo.jpg" width="269" height="69" alt="Telltale Games: Tales for your Imagination" border="0"></a></td>');
+				document.writeln('		<td><img src="/images/flashlessnav/products.jpg" width="115" height="34" alt="Products" onmouseover="showSubNav(\'subnav_products\');"></td>');
+				document.writeln('		<td><img src="/images/flashlessnav/mytelltale.jpg" width="133" height="34" alt="My Telltale" onmouseover="showSubNav(\'subnav_mytelltale\');"></td>');
+				document.writeln('		<td><img src="/images/flashlessnav/community.jpg" width="134" height="34" alt="Community" onmouseover="showSubNav(\'subnav_community\');"></td>');
+				document.writeln('		<td><img src="/images/flashlessnav/company.jpg" width="115" height="34" alt="Company" onmouseover="showSubNav(\'subnav_company\');"></td>');
+				document.writeln('		<td><img src="/images/flashlessnav/navgap.jpg" width="18" height="34" alt=""></td>');
+				document.writeln('		<td><a href="/login"><img src="/images/flashlessnav/login.jpg" width="57" height="34" alt="Login" border="0"></a></td>');
+				document.writeln('	</tr>');
+				document.writeln('	<tr>');
+				document.writeln('		<td colspan="6" style="background-image:url(/images/flashlessnav/subnav.jpg);" align="left" valign="middle"><div style="height:30px; padding-top:5px;">');
+				document.writeln('			<div id="subnav_products" style="display:none;"><a href="/products" class="plainlink" style="text-decoration:none;">Product Catalog</a><a href="/arcade" class="plainlink" style="padding-left:10px; text-decoration:none;">Arcade</a><a href="/products?action=support" class="plainlink" style="padding-left:10px; text-decoration:none;">Support</a></div>');
+				document.writeln('			<div id="subnav_mytelltale" style="display:none; padding-left:40px;"><a href="/account?action=passwdchg" class="plainlink" style="text-decoration:none;">Change Password</a><a href="/account?action=myprofile" class="plainlink" style="padding-left:10px; text-decoration:none;">Manage Profile</a><a href="/account?action=mypurch" class="plainlink" style="padding-left:10px; text-decoration:none;">My Purchases</a></div>');
+				document.writeln('			<div id="subnav_community" style="display:none; padding-left:175px;"><a href="/news" class="plainlink" style="text-decoration:none;">Newest Press</a><a href="/community" class="plainlink" style="padding-left:10px; text-decoration:none;">Links</a><a href="/comics" class="plainlink" style="padding-left:10px; text-decoration:none;">Comics</a><a href="/blogs" class="plainlink" style="padding-left:10px; text-decoration:none;">Blocks</a><a href="/forum/listforums" class="plainlink" style="padding-left:10px; text-decoration:none;">Forums</a></div>');
+				document.writeln('			<div id="subnav_company" style="display:none; padding-left:200px;"><a href="/company" class="plainlink" style="text-decoration:none;">About Us</a><a href="/pr" class="plainlink" style="padding-left:10px; text-decoration:none;">Press Releases</a><a href="/team" class="plainlink" style="padding-left:10px; text-decoration:none;">Team</a><a href="/investors" class="plainlink" style="padding-left:10px; text-decoration:none;">Investors</a><a href="/jobs" class="plainlink" style="padding-left:10px; text-decoration:none;">Jobs</a><a href="/contact" class="plainlink" style="padding-left:10px; text-decoration:none;">Contact</a></div>');
+				document.writeln('</div></td>');
+				document.writeln('	</tr>');
+				document.writeln('</table>');
+		}
+
+     </script><table width="841" height="69" border="0" cellpadding="0" cellspacing="0">
+	<tbody><tr>
+		<td rowspan="2"><a href="/home"><img src="/images/flashlessnav/logo.jpg" width="269" height="69" alt="Telltale Games: Tales for your Imagination" border="0"></a></td>
+		<td><img src="/images/flashlessnav/products.jpg" width="115" height="34" alt="Products" onmouseover="showSubNav('subnav_products');"></td>
+		<td><img src="/images/flashlessnav/mytelltale.jpg" width="133" height="34" alt="My Telltale" onmouseover="showSubNav('subnav_mytelltale');"></td>
+		<td><img src="/images/flashlessnav/community.jpg" width="134" height="34" alt="Community" onmouseover="showSubNav('subnav_community');"></td>
+		<td><img src="/images/flashlessnav/company.jpg" width="115" height="34" alt="Company" onmouseover="showSubNav('subnav_company');"></td>
+		<td><img src="/images/flashlessnav/navgap.jpg" width="18" height="34" alt=""></td>
+		<td><a href="/login"><img src="/images/flashlessnav/login.jpg" width="57" height="34" alt="Login" border="0"></a></td>
+	</tr>
+	<tr>
+		<td colspan="6" style="background-image:url(/images/flashlessnav/subnav.jpg);" align="left" valign="middle"><div style="height:30px; padding-top:5px;">
+			<div id="subnav_products" style="display:none;"><a href="/products" class="plainlink" style="text-decoration:none;">Product Catalog</a><a href="/arcade" class="plainlink" style="padding-left:10px; text-decoration:none;">Arcade</a><a href="/products?action=support" class="plainlink" style="padding-left:10px; text-decoration:none;">Support</a></div>
+			<div id="subnav_mytelltale" style="display:none; padding-left:40px;"><a href="/account?action=passwdchg" class="plainlink" style="text-decoration:none;">Change Password</a><a href="/account?action=myprofile" class="plainlink" style="padding-left:10px; text-decoration:none;">Manage Profile</a><a href="/account?action=mypurch" class="plainlink" style="padding-left:10px; text-decoration:none;">My Purchases</a></div>
+			<div id="subnav_community" style="display:none; padding-left:175px;"><a href="/news" class="plainlink" style="text-decoration:none;">Newest Press</a><a href="/community" class="plainlink" style="padding-left:10px; text-decoration:none;">Links</a><a href="/comics" class="plainlink" style="padding-left:10px; text-decoration:none;">Comics</a><a href="/blogs" class="plainlink" style="padding-left:10px; text-decoration:none;">Blocks</a><a href="/forum/listforums" class="plainlink" style="padding-left:10px; text-decoration:none;">Forums</a></div>
+			<div id="subnav_company" style="display:none; padding-left:200px;"><a href="/company" class="plainlink" style="text-decoration:none;">About Us</a><a href="/pr" class="plainlink" style="padding-left:10px; text-decoration:none;">Press Releases</a><a href="/team" class="plainlink" style="padding-left:10px; text-decoration:none;">Team</a><a href="/investors" class="plainlink" style="padding-left:10px; text-decoration:none;">Investors</a><a href="/jobs" class="plainlink" style="padding-left:10px; text-decoration:none;">Jobs</a><a href="/contact" class="plainlink" style="padding-left:10px; text-decoration:none;">Contact</a></div>
+</div></td>
+	</tr>
+</tbody></table>
+</td>
     </tr>
 
     <tr>
@@ -238,9 +314,11 @@ Last Updated on: (July 26th, 2005)
 	  <a href="http://www.telltalegames.com/forum/listforums" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Forums</a> | 		
 	  <a href="http://www.telltalegames.com/community" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Community</a> | 		
 	  <a href="http://www.telltalegames.com/home?action=tou" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Terms of Use</a> | 		
-	  <a href="http://www.telltalegames.com/home?action=privacy" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Privacy Policy</a>
+	  <a href="http://www.telltalegames.com/home?action=privacy" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Privacy Policy</a> | 
+	  <a href="http://www.telltalegames.com/advertise" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Advertise at Telltale</a> | 
+	  <a href="http://www.telltalegames.com/affiliate" class="greylink" style="text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: normal; color: #999999;">Affiliates</a>	  
 	  <br>
-          <img src="http://www.telltalegames.com/images/footer_a.jpg" height="11" width="319">
+          <a href="http://www.lionassociates.com" target="_ext"><img src="http://www.telltalegames.com/images/footer_a.jpg" border="0"></a>
         </div>
       </td>
     </tr>
@@ -251,5 +329,5 @@ Last Updated on: (July 26th, 2005)
 
 
 <!--
-Server telltalegames: Time to build page (msec): 38
+Server telltale-smax: Time to build page (msec): 2
 --></body></html>
