--- a/p/ph/pha/phanfare.com.html
+++ b/p/ph/pha/phanfare.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the phanfare.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219154602id_/http%3A//www.phanfare.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the phanfare.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615071836id_/http%3A//www.phanfare.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>Privacy Policy | Phanfare Photo and Video Sharing</title>
@@ -14,6 +14,14 @@
     A.botlink:active { COLOR: #000000; TEXT-DECORATION: none }
     A.botlink:hover { COLOR: #ffffff; TEXT-DECORATION: none }
     </style>
+    
+    <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-225759-1";
+urchinTracker();
+</script>
+
 </head>
 	<body bgcolor="#ffffff" leftmargin="0" topmargin="0">
 		<table cellspacing="0" cellpadding="0" border="0" width="810">
