--- a/i/in/inm/inmarsat.com.html
+++ b/i/in/inm/inmarsat.com.html
@@ -1,85 +1,128 @@
-<!--The following is the downloaded HTML source of the inmarsat.com privacy policy that was archived on 2002-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020810225316id_/http%3A//www.inmarsat.com/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inmarsat.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615072517id_/http%3A//about.inmarsat.com/privacy.aspx%3Flanguage%3DEN%26textonly%3DFalse) for the most accurate reproduction.-->
 
-<html><head>
-<title>Privacy practices on the web</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-
-<body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<table width="760" border="0" cellpadding="0" cellspacing="0">
-	  <tbody><tr>  
-	    <td><img src="images/spacer.gif" width="22" height="1" border="0" alt=""></td>
-	    <td><a href="index.cfm"><img src="images/px_main_banner_logo.gif" width="185" height="93" border="0" alt="inmarsat"></a></td>
-	    <td><img src="images/px_main_banner_image.jpg" width="553" height="93" border="0" alt=""></td>
-	  </tr>
-	 </tbody></table>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>Privacy Note</title><meta name="Description" content="Inmarsat owns and operates a global satellite network and offers mobile satellite communications solutions for users in the maritime, land and aeronautical sectors."><meta name="Keywords" content="inmarsat, Inmarsat, INMARSAT, satellite communications, satellite communication, satcoms, satcomms, satcom, mobile packet data, mobile ISDN, IP, Regional BGAN, BGAN, Mini-M, data communication, videophone, MPDS, Mobile Packet Data Service, Satellite IP Modem, world rally championship, WRC sponsor, WRC sponsorship"><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><script src="http://www.inmarsat.com/scripts/rollover.js" type="text/javascript"></script><script src="http://www.inmarsat.com/scripts/resize.js" type="text/javascript"></script><link href="/styles/hub.css?language=EN&amp;textonly=False" rel="stylesheet" type="text/css"><link href="http://www.inmarsat.com/styles/global.css?language=EN&amp;textonly=False" rel="stylesheet" type="text/css"></head><body><div id="horizontalmenuOuter"><a href="http://enterprise.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/nav/enterprise.gif" alt="" width="85" height="22" border="0" class="imgover"></a><a href="http://maritime.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/nav/maritime.gif" alt="" width="75" height="22" border="0" class="imgover"></a><a href="http://aero.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/nav/aeronautical.gif" alt="" width="92" height="22" border="0" class="imgover"></a><a href="http://about.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/nav/about_o.gif" alt="" width="113" height="22" border="0"></a><a href="http://partners.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/nav/partners.gif" alt="" width="88" height="22" border="0" class="imgover"></a><a href="http://support.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/nav/customer.gif" alt="" width="133" height="22" border="0" class="imgover"></a></div> <div id="logoOuter"><a href="http://www.inmarsat.com/?language=EN&amp;textonly=False"><img src="/images/logo.jpg" alt="" width="192" height="105" border="0"></a></div> 
+<div id="headerOuter"><img src="/images/banner.jpg" width="586" height="106" alt=""></div> <div id="verticalmenuOuterHolder">  <div id="hubBoxCom"> 
+   <a href="/default.aspx?language=EN&amp;textonly=False"><h1>About Inmarsat </h1></a> 
+  </div> 
+  <div id="mozilla"></div> 
   
-<table border="0" cellpadding="0" cellspacing="0" width="760">
-  <tbody><tr align="left" valign="middle"> 
-    <td colspan="3"><img src="images/px_navunderline.gif" width="760" height="9"></td>
-  </tr>
-  <tr align="left" valign="middle"> 
-    <td width="200" bgcolor="#FFFFFF"><img src="images/spacer.gif" width="200" height="13" border="0" alt=""></td>
-    <td width="360" height="706"> <br>
-      <img src="images/spacer.gif" width="360" height="1o" border="0" alt=""><br>
-      <p><span class="bold">Inmarsat Limited<br>
-        Privacy practices on the web</span></p>
-      <p>Your privacy is important to Inmarsat. This privacy statement discloses 
-        the personal information practices for the Inmarsat Limited website.</p>
-      <p>In general, you can visit our website home page and browse our site without 
-        telling us who you are and without revealing any information about yourself. 
-        You may choose to give us personal information, such as your name and 
-        address, to enable us to correspond with you.</p>
-      <p>We may collect any personal information that you volunteer while using 
-        our services for standard purposes including administration, marketing, 
-        customer services and the provision of offers of related services.</p>
-      <p>We will only use your personal information in a way that is fair (with 
-        reference to the purposes which are either disclosed to you or are relevant 
-        to the reason for your giving us the information). We may share your information 
-        with our subsidiary companies, organisations who are our business partners 
-        or with other organisations where necessary to provide the services or 
-        products which you requested when providing us with your information. 
-        This may mean that your information is transferred to countries outside 
-        the European Economic Area.</p>
-      <p>When we collect personal data from you in connection with an enquiry, 
-        we may extract some information about that query in an anonymous format 
-        and combine it with other anonymous information for marketing and advertising 
-        purposes. This anonymous information is used and analysed only at an aggregate 
-        level to help us to understand trends and patterns. None of this information 
-        is reviewed at an individual level.</p>
-      <p>Inmarsat Limited is registered under the data protection laws in the 
-        United Kingdom and takes all reasonable care to prevent any unauthorised 
-        access to your personal data.</p>
-      <p>To contact us in relation to this privacy statement, please write to:</p>
-      <p>Email: <a href="mailto:company_secretary@inmarsat.com">company_secretary@inmarsat.com</a></p>
-      <p>or</p>
-      <p class="bold">The Company Secretary<br>
-        Inmarsat Limited<br>
-        99 City Road<br>
-        London EC1Y 1AX<br>
-        United Kingdom </p>
-    </td>
-    <td width="181" height="706" bgcolor="#FFFFFF" valign="top"><a href="javascript:history.go(-1)" onmouseover="s('back','back1')" onmouseout="s('back','back0')"><img src="images/bt_back0.gif" width="51" height="23" border="0" alt="back" name="back" align="right"></a></td>
-  </tr>
-  <tr align="left" valign="middle"> 
-    <td colspan="3"><img src="images/hr_bottomline.gif" width="760" height="24" border="0" alt=""></td>
-  </tr>
-  <tr align="left" valign="middle"> 
-    <td colspan="3"><a href="javascript:history.go(-1)" onmouseover="s('back','back1')" onmouseout="s('back','back0')"><img src="images/bt_back0.gif" width="51" height="23" border="0" alt="back" name="back" align="right"></a></td>
-  </tr>
-  <tr align="left" valign="middle">
-    <td colspan="3">&nbsp;<br>
-</td>
-  </tr>
-</tbody></table>
-
-
-
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/business/default.aspx?top_level_id=1&amp;language=EN&amp;textonly=False">Our business</a></li> 
+    </ul> 
+  </div> 
   
-
-
-
-
-</body></html>
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/services.aspx?top_level_id=2&amp;language=EN&amp;textonly=False">Our services</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/satellites.aspx?top_level_id=3&amp;language=EN&amp;textonly=False">Our satellites</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/regional_offices/default.aspx?top_level_id=4&amp;language=EN&amp;textonly=False">Regional offices</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/news/default.aspx?top_level_id=5&amp;language=EN&amp;textonly=False">Newsroom</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="http://investors.inmarsat.com/default.aspx?language=EN&amp;textonly=False">Investor relations</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/careers/default.aspx?top_level_id=7&amp;language=EN&amp;textonly=False">Careers</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/contacts.aspx?top_level_id=8&amp;language=EN&amp;textonly=False">Contacts</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/map/default.aspx?top_level_id=81&amp;language=EN&amp;textonly=False">Location map</a></li> 
+    </ul> 
+  </div> 
+  
+  <div class="nav closed"> 
+    <ul> 
+      <li id="section"><a href="/enquiries.aspx?top_level_id=9&amp;language=EN&amp;textonly=False">Enquiries</a></li> 
+    </ul> 
+  </div> 
+  <div id="formOuter"><br><script src="http://www.inmarsat.com/js/KDmicrodir.js" type="text/javascript"></script>
+<form name="QuickForm" id="QuickForm" method="get" action="http://search.inmarsat.com/ultrasearch/query/index.jsp">
+	<script src="http://www.inmarsat.com/scripts/select_options.js" type="text/javascript"></script>
+	<br><br>
+	<p>Search <input type="image" class="formleft" src="http://www.inmarsat.com/images/sweepshape.gif" alt="SUBMIT!" width="13" height="18" border="0"><br>
+		 <input name="SearchText" type="text" class="txtFieldFix" value="" size="15" maxlength="20"><br>
+		<br>
+ </p></form>
+ 
+       </div></div><div id="placeHolder"><div id="innercontentHolder"><div id="innercontentWide"><p xmlns=""><strong>Inmarsat Global Limited </strong><br><strong>Privacy practices on the web</strong></p><p xmlns="">
+          Your privacy is important to Inmarsat. This privacy statement discloses the personal
+          information practices for the Inmarsat Gloabl Limited website. 
+     </p><p xmlns="">
+          In general, you can visit our website home page and browse our site without telling
+          us who you are and without revealing any information about yourself. 
+     </p><p xmlns="">
+          If you have an enquiry or require information from Inmarsat, you may choose to give
+          us personal data, such as your name and contact details, to enable us to correspond
+          with you in this regard. To enable us to respond to your enquiry, your details will
+          need to be shared with Inmarsat Partners, those companies and organisations that are
+          recognised by Inmarsat as distributors of its services and solutions. This may mean
+          that your information is transferred to countries outside the European Economic Area. 
+     </p><p xmlns="">
+          When we collect personal data from you in connection with an enquiry, we may extract
+          some information about that query in an anonymous format and combine it with other
+          anonymous information for marketing and advertising purposes. This anonymous information
+          is used and analysed only at an aggregate level to help us to understand trends and
+          patterns. None of this information is reviewed at an individual level. 
+     </p><p xmlns="">
+          When we collect personal data from you in connection with an enquiry, we will ask
+          you for your consent to allow us to hold these contact details on a database for marketing-related
+          purposes and for the provision of offers of related services which we believe may
+          be of interest to you. 
+     </p><p xmlns="">
+          We will only use your personal information in a way that is fair (with reference to
+          the purposes which are either disclosed to you or are relevant to the reason for your
+          giving us the information). 
+     </p><p xmlns="">
+          Inmarsat Global Limited is registered under the data protection laws in the United
+          Kingdom and takes all reasonable care to prevent any unauthorised access to your personal
+          data. 
+     </p><p xmlns="">
+          To contact us in relation to this privacy statement, please write to: 
+          <br></p><p xmlns="">
+          Email: <a href="mailto:company_secretary@inmarsat.com">company_secretary@inmarsat.com</a></p><p xmlns="">
+          or 
+     </p><p xmlns="">
+          The Company Secretary 
+          <br>
+          Inmarsat Global Limited 
+          <br>
+          99 City Road 
+          <br>
+          London EC1Y 1AX 
+          <br>
+          United Kingdom 
+     </p><div xmlns=""><a href="javascript:history.go(-1)">Back</a></div><div id="footer"> 
+    <p><a href="http://about.inmarsat.com/privacy.aspx?language=EN&amp;textonly=False">Privacy</a>| <a href="http://about.inmarsat.com/terms_conditions.aspx?language=EN&amp;textonly=False">Terms &amp; Conditions</a>This site is best viewed with Internet Explorer 6.</p> 
+</div>
+</div></div></div></body></html>
