--- a/d/de/del/delivery.net.html
+++ b/d/de/del/delivery.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the delivery.net privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219201655id_/http%3A//www.digitalimpact.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the delivery.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615072616id_/http%3A//www.digitalimpact.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -521,4 +521,9 @@ js=no" width="1" height="1"></noscript><!--//-->
 
 
 
+PHP Warning:  PHP Startup: SV‹t$W‹=¬¡: Unable to initialize module
+Module compiled with module API=20020429, debug=0, thread-safety=1
+PHP    compiled with module API=20050922, debug=0, thread-safety=1
+These options need to match
+ in Unknown on line 0
 </body></html>
