--- a/o/ol/old/oldhouseweb.com.html
+++ b/o/ol/old/oldhouseweb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oldhouseweb.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229234911id_/http%3A//www.oldhouseweb.com/stories/Detailed/997.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oldhouseweb.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615073137id_/http%3A//www.oldhouseweb.com/stories/Detailed/997.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 
@@ -8,20 +8,8 @@
 <meta name="description" content="Our privacy policy - We strive to protect your personal privacy. Here are the policies we follow. - Oldhouseweb.com">
 <meta name="keywords" content="Our,privacy,policy,We,strive,protect,your,personal,privacy,Here,are,policies,we,follow"> 
  
-<style type="text/css"><!--
-a{ color: #0000CC; text-decoration: underline }
-a:visited{ color: #0000CC; text-decoration: underline }
-a:hover{ color: #FF0000; text-decoration: underline }
+<link rel="stylesheet" type="text/css" href="http://www.oldhouseweb.com/include/homepagestyle.css">
 
-a.white{ color: #FFFFFF; text-decoration: underline }
-a.white:visited{ color: #FFFFFF; text-decoration: underline }
-a.white:hover{ color: #000080; text-decoration: underline }
-.catheader { font-size: 9pt; 
-	     font-family: verdana,arial,helvetica,sans-serif; 
-	     background: #000080;
-	     color: #FFFFFF; line-height: 16pt }
-h1 {font-family: verdana,arial,helvetica,sans-serif; font-size: 16pt; color: #000080}
---> </style>
 <script type="text/javascript">
 function submitForm(act, spec){
 	
@@ -130,7 +118,7 @@ T+="}</SCRIPT></head><BODY onLoad='specialInit()'><center>"+imageTitle+"<P><IMG 
 <td>
 <font face="verdana,arial,helvetica" size="2"><a href="http://www.oldhouseweb.com/">HOME</a>  <img alt="navigation arrow" src="http://images.oldhouseweb.com/bitmaps/arrow2.gif" width="13" height="9" align="bottom"> <a href="http://www.oldhouseweb.com/stories/The_Old_House_Web/">The Old House Web</a> 
 <h1>Our privacy policy</h1>
-<blockquote><font color="#848484" face="arial,helvetica" size="3"><b><i>We strive to protect your personal privacy. Here are the policies we follow.
+<blockquote><font color="#8C4239" face="times new roman, times, serif" size="4"><b><i>We strive to protect your personal privacy. Here are the policies we follow.
 </i></b></font></blockquote>
 </font></td>
 </tr>
@@ -163,7 +151,7 @@ google_color_text = "000000";
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <br>
-<img alt="sp" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5">
+<img alt="" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5">
 <br>
 <!-- new ad links here -->
 <script type="text/javascript"><!--
@@ -182,15 +170,13 @@ google_color_text = "000000";
 </script>
 <!-- end new ad links -->
 </div>
-<img alt="sp" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5">
+<img alt="" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5">
  
 <table border="0" cellpadding="0" cellspacing="0" align="center" width="170">
 <tbody><tr>
 
 <td valign="top" width="170" bgcolor="#FFFFFF">
   
-
- 
 </td>
 </tr>
 <tr>
@@ -199,10 +185,10 @@ google_color_text = "000000";
 </tr>
 </tbody></table>
 </td>
-<td width="20" rowspan="2"><img alt="sp" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="20" height="10"></td>
+<td width="20" rowspan="2"><img alt="" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="20" height="10"></td>
 <td valign="top" colspan="5">
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%"> <tbody><tr><td colspan="2"><img alt="sp" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5"></td></tr> 
+<table border="0" cellpadding="0" cellspacing="0" width="100%"> <tbody><tr><td colspan="2"><img alt="" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5"></td></tr> 
 <tr>
 <td><font face="verdana,arial,helvetica" size="2" color="#848484"><b>
  The Old House Web   
@@ -211,12 +197,17 @@ google_color_text = "000000";
 <td align="right"><font face="verdana,arial,helvetica" size="1" color="#848484"> <!-- date would go here -->
 
 </font></td>
-</tr><tr><td bgcolor="#000080" colspan="2"><img alt="sp" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="1" height="1"></td></tr><tr><td colspan="2"><img alt="sp" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5"></td></tr></tbody></table>
+</tr>
+  
+<tr><td bgcolor="#000080" colspan="2"><img alt="" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="1" height="1"></td></tr>
+ 
+<tr><td colspan="2"><img alt="" src="http://images.oldhouseweb.com/bitmaps/trans.gif" width="5" height="5"></td></tr>
+</tbody></table>
 </td>
 </tr>
 <tr>
 <td valign="top">
-<font face="verdana, arial, helvetica" size="2">
+<div class="story">
 <p>Thank you for visiting The Old House Web. Your privacy is important to us. We
 will endeavor to respect and protect it.</p>
 <p>To better protect your privacy, we provide this notice explaining our online
@@ -322,19 +313,22 @@ our opening statement: </p>
 <p>Your right to personal privacy is important to us. We will endeavor to
 respect it.</p>
 <p align="right"><strong><em> <font size="2"> This File Updated: Nov. 30, 2003</font></em></strong></p>
-
+</div>
  <p>
+</p><div class="story">
 
-</p><p>
+</div>
+<p>
 
-
-</p></font></td>
+ 
+</p></td>
 </tr>
 
 </tbody></table>
 
 <table border="0" cellspacing="0" cellpadding="0" width="760">
 <tbody><tr><td>
+ 
 <table border="0" cellspacing="0" cellpadding="0" width="100%" bgcolor="#EEEEEE">
 <tbody><tr>
 <td align="left" valign="bottom" bgcolor="#EEEEEE" width="110">
@@ -383,11 +377,10 @@ Statement</a>
   </tbody></table>
 
 <hr noshade="" size="1" width="600">
-<b>Copyright 1998 - 2005, The Old House Web.<br>All Rights
+<b>Copyright 1998 - 2006, The Old House Web.<br>All Rights
 Reserved.</b></font>
 
-</td></tr></tbody></table></td></tr></tbody></table><p>&nbsp;</p>
-</td>
+</td></tr></tbody></table></td></tr></tbody></table><p>&nbsp;</p>  </td>
 </tr>
 </tbody></table>
 
