--- a/h/he/hen/hentairevolt.com.html
+++ b/h/he/hen/hentairevolt.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hentairevolt.com privacy policy that was archived on 2005-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051123122012id_/http%3A//www.hentairevolt.com/pp.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hentairevolt.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615073353id_/http%3A//hentairevolt.com/pp.html) for the most accurate reproduction.-->
 
 <html><head></head><body bgcolor="#ffffff" text="#000000" margineheight="0" marginwidth="0"><title>Privacy Policy</title><center><br><br><font face="verdana" size="+1" color="#000000"><b>Our Commitment To Privacy<br><br>
 Your privacy is important to us. To better protect your privacy we provide this notice explaining our online information practices and the choices you can make about the way your information is collected and used. To make this notice easy to find, we make it available on our homepage and at every point where personally identifiable information may be requested.<br><br>
